--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-server.port=8080
-
 spring.datasource.url=jdbc:mysql://localhost:3306/xml2db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=your_mysql_password
+spring.datasource.password=Shaurya@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
